--- a/Projecto/3Ex/Server/makefile
+++ b/Projecto/3Ex/Server/makefile
@@ -1,4 +1,4 @@
 server: server.o
-	gcc -Wall server.o -o server
+	gcc -Wall server.o -o server -lm
 server.o: server.c
-	gcc -Wall -c server.c -o server.o
+	gcc -Wall -c server.c -o server.o -lm
